updated the logo image. Fixed log sizing on mobile.  General style fixes for xs mobile screens.

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -123,6 +123,7 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 	color: $color-text;
 	font-family: $header;
 	font-size: 42px;
+	line-height: 42px;
 	margin: 0;
   }
   p {
@@ -231,11 +232,11 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
   // Nav Styles
   // =====================
   .nav-burger{
-	width: 40px;
+	width: 32px;
 	height: 30px;
 	position: fixed;
-	top:35px;
-	left: 35px;
+	top:25px;
+	left: 15px;
 	margin: 0;
 	-webkit-transform: rotate(0deg);
 	-moz-transform: rotate(0deg);
@@ -247,12 +248,17 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 	transition: .5s ease-in-out;
 	cursor: pointer;
 	z-index: 15;
+		@media only screen and (min-width: $bp-med) {
+			top:35px;
+			left: 35px;
+			width: 40px;
+		}
   }
 
   .nav-burger span {
 	display: block;
 	position: absolute;
-	height: 5px;
+	height: 4px;
 	width: 100%;
 	background: #ffffff;
 	border-radius: 9px;
@@ -266,12 +272,14 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 	-moz-transition: .25s ease-in-out;
 	-o-transition: .25s ease-in-out;
 	transition: .25s ease-in-out;
-	&.drop-shadow {
-	  -webkit-box-shadow: 2px21px 5px 0px $burger-shadow;
-	  -moz-box-shadow: 2px 2px 5px 0px $burger-shadow;
-	  box-shadow: 2px 2px 5px 0px $burger-shadow;
-	}
-	
+		&.drop-shadow {
+			-webkit-box-shadow: 2px 21px 5px 0px $burger-shadow;
+			-moz-box-shadow: 2px 2px 5px 0px $burger-shadow;
+			box-shadow: 2px 2px 5px 0px $burger-shadow;
+		}
+		@media only screen and (min-width: $bp-med) {
+			height: 5px;
+		}
   }
   
   .nav-burger span:nth-child(1) {
@@ -284,11 +292,17 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
   }
   
   .nav-burger span:nth-child(2),.nav-burger span:nth-child(3) {
-	top: 12px;
+	top: 9px;
+		@media only screen and (min-width: $bp-med) {
+			top: 12px;
+		}
   }
   
   .nav-burger span:nth-child(4) {
-	top: 24px;
+	top: 18px;
+		@media only screen and (min-width: $bp-med) {
+			top: 24px;
+		}
   }
   
   .nav-burger.open span {
@@ -425,33 +439,43 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
-	padding:  15px 3% 10px;
+	padding:  25px 3% 10px;
 	position: absolute;
 	top: 0;
 	left: 0;
 	width: 100%;
-	a[name="home"] {
-	  display: none;
-	}
-	.logo {
-		min-width: 250px;
-	  max-width: 509px;
-	  width: 50%;
-	}
-	.nav-container,
-	.social {
-	  width: 100px;
-	}
-	.social {
-	  text-align: right;
-	}
-	@media only screen and (min-width: $bp-med) {
-	  padding: 30px 5% 10px;
-	  .logo {
-		width: 30%;
-  
-	  }
-	}
+		a[name="home"] {
+			display: none;
+		}
+		.logo {
+			margin: 0 auto;
+			min-width: 200px;
+			max-width: 509px;
+			width: 65%;
+		}
+		.social {
+			display: none;
+			text-align: right;
+		}
+		@media only screen and (min-width: $bp-sm) {
+			.logo {
+				min-width: 250px;
+				width: 50%;
+			}
+			.nav-container,
+			.social {
+				width: 100px;
+			}
+			.social {
+				display: block;
+			}
+		}
+		@media only screen and (min-width: $bp-med) {
+			padding: 30px 5% 10px;
+			.logo {
+			width: 30%;
+			}
+		}
   }
   
   // Social 
@@ -481,14 +505,14 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 	}
 	.container {
 	  background-color: $whitebg;
-	  margin: 260px auto 45px;
+	  margin: 17vh auto 45px;
 	  padding: 45px 20px 15px;
 		max-width: 800px;
 		text-align: center;
 	  width: 92%; 
 	}
 	p {
-	  font-size: 1.75em;
+	  font-size: 1.5em;
 	  line-height: 1.25em;
 	  margin-bottom: 30px;
 	  text-align: center;
@@ -503,7 +527,7 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 		line-height: 18px;
 		margin-top: 40px;
 		blockquote {
-			margin: 0 0 0 5em;
+			margin: 0;
 		}
 		.cite {
 			text-align:right;
@@ -514,10 +538,21 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 			margin: 0.5em 0.5em 0 0;
 		}
 	}
+	@media only screen and (min-width: $bp-sm) {
+		p {
+			font-size: 1.75em;
+		}
+		.featured-testimonial blockquote {
+			margin-left: 3em;
+		}
+	}
 	@media only screen and (min-width: $bp-med){
 	  min-height: 60vh;
 	  p {
 		line-height: 1.5em;
+		}
+		.container {
+			margin-top: 260px;
 		}
 		.featured-testimonial blockquote {
 			margin-left: 13em;
@@ -799,6 +834,9 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 			background: $whitebg;
 			padding: 45px 3%;
 		}
+		.contact-form {
+			padding-top: 25px;
+		}
 		.contact-info,
 		.contact-form {
 			display: block;
@@ -820,6 +858,7 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 			font-weight: 300;
 			font-family: $standard;
 			padding: 6px 10px;
+			width: 100%;
 		}
 		.wpcf7-not-valid-tip {
 			font-size: 12px;
@@ -835,8 +874,10 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 			margin: 1em 0.5em 1em 0;
 			padding-left: 0;
 		}
-	
 		@media only screen and (min-width: $bp-med) {
+			.contact-form {
+				padding-top: 0;
+			}
 			.contact-info {
 				width: 30%;
 			}
@@ -852,6 +893,9 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 				display: flex;
 				justify-content: space-between;
 				padding: 45px 5%;
+			}
+			input.wpcf7-form-control.wpcf7-text {
+				width: 85%;
 			}
 		}
 		@media only screen and (min-width: $bp-lrg) {
@@ -906,6 +950,7 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 	.contact-email {
 		font-family: $standard;
 		font-size: 14px;
+		line-height: 14px;
 		color: #ffffff;
 		text-align: center;
 		a {
